# google_cloud_platform

./: README.md  gcp_functions.py  pyproject.toml
dataflow/: scripts.md
filestore/: cheatsheet.md
gcloud/: scripts.md
iam/: gcp_workload_identity.md
